--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/papersystem?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://120.79.196.161:3306/DIDIstribution?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=
+jdbc.password=blackhawk
