--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.4</version>
+    </dependency>
     <!--mysql驱动包-->
     <dependency>
       <groupId>mysql</groupId>
@@ -78,6 +83,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
         <version>4.2.6.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>4.2.6.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
