--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     <filter>
-        <filter-name>encodingFilter</filter-name>
+        <filter-name>CharacterFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
             <param-name>encodingFilter</param-name>
@@ -33,7 +33,7 @@
         </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>encodingFilter</filter-name>
+        <filter-name>CharacterFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <welcome-file-list>
