--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.elasticsearch.client</groupId>
+      <artifactId>elasticsearch-rest-high-level-client</artifactId>
+      <version>6.2.4</version>
+    </dependency>
   </dependencies>
 
   <build>
